# network-config-parser

./: .gitignore  .pre-commit-config.yaml  README.md  ios_parser.py  pyproject.toml  requirements.txt  setup.cfg
.github/ISSUE_TEMPLATE/: 01_BUG_REPORT.md
.github/workflows/: black.yml
docs/: CODE_OF_CONDUCT.md  CONTRIBUTING.md  SECURITY.md
ncp/: __init__.py
ncp/helpers/: __init__.py  _patterns.py  exceptions.py  utils.py
ncp/ios/: __init__.py  _patterns.py  parser.py  parser.pyi
ncp/parser/: IOSGrammar.g4  IOSGrammar.tokens  IOSGrammarLexer.py  IOSGrammarLexer.tokens  IOSGrammarListener.py  IOSGrammarParser.py  IOSGrammarVisitor.py  IOSLexer.g4  IOSParser.g4
src/ncp/ios/: parser.py
tests/: __init__.py  config.cfg  config_12-3.cfg  conftest.py  test_ios_parser.py
tests/data/: config.cfg  config_12-3.cfg  config_no_hostname.cfg  config_no_interfaces.cfg  config_no_version.cfg
