[tool.poetry]
name = "ncp"
version = "0.1.0"
description = "Parse network device configuration files"
authors = ["Dalton Rardin <dalton@daltonrardin.com>"]
license = "AGPL-3.0-or-later"
readme = "README.md"
repository = "https://github.com/dalrrard/network-config-parser"
packages = [
  { include = "ncp" },
  { include = "tests", format = "sdist" },
]

[tool.poetry.urls]
"Bug Tracker" = "https://github.com/dalrrard/network-config-parser/issues"

[tool.poetry.dependencies]
python = "^3.7"
networkx = "^2.6.3"

[tool.poetry.group.dev.dependencies]
mypy = "^0.910"
flake8 = "^4.0.1"
black = "^21.9b0"
bandit = "^1.7.0"
dodgy = "^0.2.1"
isort = "^5.9.3"
pre-commit = "^2.15.0"
pydocstyle = "^6.1.1"
pylint = "^2.11.1"

[tool.poetry.group.test]
optional = true

[tool.poetry.group.test.dependencies]
pytest = "^6.2.5"
pytest-cov = "^3.0.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 88 # override black's default line-length
experimental-string-processing = true
exclude = '''
/(
    \.git
  | \.mypy_cache
  | \.tox
  | venv
  | \.venv
  | _build
  | buck-out
  | build
  | dist
)/
'''

[tool.isort]
# make it compatible with black
profile = "black"

[tool.pytest.ini_options]
minversion = "6.0"
addopts = "-ra -vv -l"

[tool.pydocstyle]
ignore = [
    "D107",
    "D203",
    "D212",
    "D213",
    "D402",
    "D413",
    "D415",
    "D416",
    "D417",
]

[tool.mypy]
strict = true
warn_unused_ignores = true
warn_redundant_casts = true
disallow_any_unimported = true
show_error_codes = true

[tool.bandit.assert_used]
skips = ["test_*.py", "conftest.py"]
