[metadata]
name = ncp
version = 0.0.1
author = Dalton Rardin
author_email = dalton@daltonrardin.com
description = Parse network device configuration files
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/dalrrard/network-config-parser
project_urls =
    Bug Tracker = https://github.com/dalrrard/network-config-parser/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: GNU Affero General Public License v3 or later (AGPLv3+)
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6

[options.packages.find]
where = src